<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="deal"
            type="me.abhishek.targetdeals.model.Deal" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_add_to_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_to_cart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/btn_add_to_list" />

        <TextView
            android:id="@+id/tv_deal_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="5dp"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:text="@{deal.description}"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@id/btn_add_to_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/long_text" />

        <TextView
            android:id="@+id/tv_deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@{deal.title}"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/tv_deal_desc"
            app:layout_constraintLeft_toLeftOf="@+id/tv_deal_desc"
            tools:text="@string/small_text" />

        <TextView
            android:id="@+id/tv_discounted_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:text="@{deal.salePrice != null ? deal.salePrice : deal.price}"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_deal_title"
            app:layout_constraintLeft_toLeftOf="@+id/tv_deal_title"
            tools:text="@string/dummy_price" />

        <TextView
            android:id="@+id/tv_mrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/darker_gray"
            android:textSize="32sp"
            android:visibility="@{deal.salePrice == null ? View.INVISIBLE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@+id/tv_discounted_price"
            app:layout_constraintRight_toRightOf="parent"
            app:strikePrice="@{deal.price}"
            tools:text="@string/dummy_price_2" />

        <ImageView
            android:id="@+id/iv_deal_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:imageUrl="@{deal.image}"
            app:layout_constraintBottom_toTopOf="@id/tv_discounted_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>